<?xml version="1.0"?>
<package format="3">
  <name>pkg_name_can</name>
  <version>1.2.0</version>
  <description>
    DBC Parsing Interface inspired by New Eagle Raptor Driver
  </description>

  <maintainer email="sisahawork@gmail.com">Siddharth Saha</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>pkg_name_msgs</depend>
  <depend>can_msgs</depend>
  <depend>can_dbc_parser</depend>
  <depend>ros2_socketcan</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>